tests/expected_invalid_parse_grant_missing_as.diag.out
<input>:8:24: error: expected 'as' after grant call
        grant start_pass() pass {
                           ^^^^
